Add Ship Service master

--- a/src/main/webapp/theme/styles/shards-dashboards.1.1.0.css
+++ b/src/main/webapp/theme/styles/shards-dashboards.1.1.0.css
@@ -4253,11 +4253,11 @@ a.text-accent:hover, a.text-accent:focus {
     padding: 0.9375rem 1.5625rem; }
     .main-sidebar .nav .nav-item .nav-link i {
       min-width: 1.25rem;
-      font-size: 90%;
+      font-size: 130%;
       text-align: center;
       vertical-align: middle;
       will-change: color;
-      color: #CACEDB;
+      color: #48a4ff;
       transition: color 200ms ease;
       margin-right: 0.375rem; }
     .main-sidebar .nav .nav-item .nav-link i.material-icons {
